--- a/05_CSS标签属性设计--边距.html
+++ b/05_CSS标签属性设计--边距.html
@@ -78,7 +78,7 @@
             border-top: 3px solid orange;
             border-bottom:1px solid white;
         }
-        a{
+        #left01{
             /* 没有对宽度进行设置，所以宽度=左内边距+内容+右内边距 */
             font-size: 20px;
             background-color:none;
@@ -89,9 +89,28 @@
             display: inline-block;
             line-height: 70px;
             padding: 0px 30px;
+            float:left
 
         }
-        a:hover{
+        #right{
+            /* 没有对宽度进行设置，所以宽度=左内边距+内容+右内边距 */
+            font-size: 20px;
+            background-color:none;
+            color: black;
+            text-decoration: none;
+            border: none;
+            box-sizing: border-box;
+            display: inline-block;
+            line-height: 70px;
+            padding: 0px 30px;
+            float: right;
+
+        }
+        #left01:hover {
+            background-color: gainsboro;
+            color: orange;
+        }
+        #right:hover {
             background-color: gainsboro;
             color: orange;
         }
@@ -99,9 +118,104 @@
 </head>
 <body>
     <div id="background">
-        <a href="">设为首页</a>
-        <a href="">手机新浪网</a>
-        <a href="">移动客户端</a>
+        <a href="" id="left01">设为首页</a>
+        <a href="" id="left01">手机新浪网</a>
+        <a href="" id="left01">移动客户端</a>
+        <!-- 右浮动是从右往左念（也就是最右边的先飘）-->
+        <a href="" id="right">邮箱</a>
+        <a href="" id="right">博客</a>
+        <a href="" id="right">微博</a>
+        <a href="" id="right">登录</a>
     </div>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        *{
+            margin=0px;
+        }
+        #news{
+            width: 240px;
+            height: 132px;
+            border: 0px;
+
+        }
+        #sanxingphoto{
+            width: 240px;
+            height: 132px;
+            border: none;
+
+        }
+        #sanxing{
+            width: 240px;
+            height: 30px;
+            color:white;
+            background-color:rgba(0,0,0,0.5);
+            position: relative;
+            top:-25px;
+            padding-left:3px;
+        }
+    </style>
+</head>
+<body>
+    <div id="news">
+        <img src="image/img02.png" alt="" id="sanxingphoto">
+        <p id="sanxing">三星再陷关闭手机工厂风波</p>
+    </div>
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+   <style>
+       .cart{
+           width: 200px;
+           height: 70px;
+           background-color:antiquewhite;
+           border: 1px solid gray;
+           position: relative;
+       }
+       #shopping{
+           font-size:20px;
+           color: black;
+           text-align: center;
+           line-height: 70px;
+           position: relative;
+       }
+       span{
+           position: absolute;
+           right:10px;
+       }
+       #pot{
+           width: 20px;
+           height: 20px;
+           border-radius: 50% 50% 50% 10%;
+           background-color: red;
+           color:white;
+           position: absolute;
+           top: 10px;
+           right: 30px;
+           text-align: center;
+           line-height: 20px;
+       }
+
+   </style>
+</head>
+<body>
+   <div class="cart">
+       <p id="shopping">我的购物车 <span>&gt</span></p>
+       <p id="pot">1</p>
+   </div>
 </body>
 </html>
