--- a/JS 语法--变量与数据类型.html
+++ b/JS 语法--变量与数据类型.html
@@ -28,7 +28,7 @@ var j = 10,c = 20; //同时声明并赋值多个变量
  数字：整形 浮点型
  字符串 sring
  布尔
- 对象：空对象 null 数组对象 dict 对象list -->
+ 对象：空对象 null 数组对象 list 对象dict -->
 
  <!DOCTYPE html>
  <html lang="en">
@@ -78,6 +78,58 @@ var j = 10,c = 20; //同时声明并赋值多个变量
         // 切割成两个部分
         console.log(s.split(' '))
 
+    </script>
+ </body>
+ </html>
+
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>数组对象</title>
+ </head>
+ <body>
+    <script>
+        // 数组类型
+        var arr=[1,2,3,4,5];
+        // 打印出来的是对象
+        console.log(typeof arr);
+        // 索引取值
+        console.log(arr[1]);
+        // 切片
+        console.log(arr.length);
+        console.log(arr.slice(0,3));
+        // 添加内容
+        arr.push(10)
+        console.log(arr);
+        // 删除内容
+        arr.pop(10)
+        console.log(arr);
+
+    </script>
+ </body>
+ </html>
+
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>对象</title>
+ </head>
+ <body>
+    <script>
+        var dic={name:"Tom",age:18,score:90.5}
+        // 取值
+        console.log(dic["name"])
+        console.log(dic.name)
+        // 添加内容
+        dic["sex"]="male";
+        console.log(dic);
+        // 删除内容
+        delete dic.score;
+        console.log(dic);
 
     </script>
  </body>
