--- a/JS 语法--运算符.html
+++ b/JS 语法--运算符.html
@@ -19,6 +19,8 @@
         // 比较运算符 ==相等 ===全等 ！==不全等
         console.log("10"==10) //ture 因为强制转换了
         console.log("10"===10) //false 既比较值也比较类型
+        // 逻辑运算符 && （and） ||（or） not（！）
+        console.log(!true && false || true) //true
 
     </script>
 </body>
