--- a/JS 语法--函数.html
+++ b/JS 语法--函数.html
@@ -66,3 +66,8 @@
     </script>
 </body>
 </html>
+
+<!-- 全局作用域和函数作用域，以函数的{ }作为划分作用域的依据 -->
+var a; # 放在函数外全局 放在函数里局部
+let b; # 块作用域变量
+const c; #常量，不可修改
