--- a/JS 网页处理--JQuery.html
+++ b/JS 网页处理--JQuery.html
@@ -1,1 +1,21 @@
-<!-- 可以用 script src=jquery-3.7.1.min.js 进行导入 -->
+<!-- 可以用 script src=jquery-3.7.1.min.js 进行导入 它旨在处理浏览器不兼容性并简化 HTML DOM 操作、事件处 理、动画和 Ajax-->
+
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+ </head>
+ <body>
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+ <!-- 先导入jquery -->
+    <script src="jquery-3.7.1.min.js"></script>
+    <script>
+        // jquery 的选择器 + 操作函数
+        $("h1").html("jquery")
+    </script>
+ </body>
+ </html>
