--- a/JS 网页处理--JQuery基础功能.html
+++ b/JS 网页处理--JQuery基础功能.html
@@ -14,7 +14,7 @@
     <h1></h1>
     <h1 id="tar"></h1>
     <script>
-      // jquery 的选择器 + 操作函数
+      // jquery 的选择器 + 操作函数 $(DOM对象)>>> 转换成Jquery对象
       $("h1").html("jquery") //伪数组：因为他可以操作一系列数据，虽然具有类似数组的行为（如 length 属性和索引访问），但它们不是数组对象
       //  若只想对数组的一个对象操作可以用切片，当这会使jq对象变成DOM对象
       $("h1")[0].innerHTML="hi,jquery"
@@ -77,3 +77,4 @@
 
  </body>
  </html>
+
